--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "homepage": "https://tema1313.github.io/CameraTest/",
+  "homepage": "https://tema1313.github.io/CameraTest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
